...
	room: string;
};

export const MAX_TIMETABLE_LESSONS = 150;

export const TIMETABLE_WEEKDAYS = [
	{ value: 1, shortLabel: "Mo", label: "Montag" },
	{ value: 2, shortLabel: "Di", label: "Dienstag" },
	{ value: 3, shortLabel: "Mi", label: "Mittwoch" },
	{ value: 4, shortLabel: "Do", label: "Donnerstag" },
	{ value: 5, shortLabel: "Fr", label: "Freitag" },
	{ value: 6, shortLabel: "Sa", label: "Samstag" },
	{ value: 7, shortLabel: "So", label: "Sonntag" },
...
